<resources>
    <string name="app_name">JDMLegends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JDMLegends</string>
    <string name="nav_header_subtitle">For Car Guys By Car Guys</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_here">Register here</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_here">Log In here</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_save">Save</string>
    <string name="menu_cars">Cars</string>
    <string name="menu_map">Map</string>

</resources>