<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_car"
            android:title="@string/menu_cars" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/ic_save"
            android:title="@string/menu_save" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search"/>

    </group>
</menu>