<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jdmlegendsv21.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cars"
        android:name="com.example.jdmlegendsv21.ui.cars.CarsFragment"
        android:label="@string/menu_cars"
        tools:layout="@layout/fragment_cars" />

    <fragment
        android:id="@+id/nav_save"
        android:name="com.example.jdmlegendsv21.ui.save.SaveFragment"
        android:label="@string/menu_save"
        tools:layout="@layout/fragment_save"/>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.jdmlegendsv21.ui.slideshow.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />
</navigation>